charts/istio/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: networktools-gateway
  namespace: nwtools
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "networktools.example.com"
    port:
      number: 80
      name: http
      protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: networktools-virtualservice
  namespace: nwtools
spec:
  hosts:
  - "networktools.example.com"
  gateways:
  - networktools-gateway
  http:
  - match:
    - uri:
        prefix: /nwt
    rewrite:
      uri: "/"
    route:
    - destination:
        host: networktools-service
        port:
          number: 8080
